[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/EnemyType1.gd" type="Script" id=1]
[ext_resource path="res://images/GolabRuch.png" type="Texture" id=2]
[ext_resource path="res://sounds/ENEMIES/PIGEON_V4.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "EnemyMove"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[node name="EnemyFlyingOne" type="Area2D"]
script = ExtResource( 1 )
rewardPoints = 478
moveSpeed = 550
isFlyingEnemy = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -40.4986, -6.11699, -35.3221, -32.9701, -12.9984, -45.9114, 20.0018, -44.9408, 39.4137, -28.7642, 39.4137, -7.08759, 39.7373, 6.82428, 34.2372, 27.2068, 17.4824, 44.4116, -17.0857, 44.4116, -38.5574, 29.4715, -40.1751, 6.50075 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "EnemyMove"
anims/EnemyMove = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 4.91644, 4.91644 )

[node name="EnemyDieAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0
bus = "Die"
[connection signal="area_entered" from="." to="." method="_on_EnemyOne_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyOne_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
